--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,19 @@ title: Vincent's Portfolio
 email: vrli1@asu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write some witty description here. Have a good day!
-baseurl: "betaPortfolio" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username:  
+
+instagram_path: https://www.instagram.com/thisguyvince/
+github_path: https://github.com/vincewho
 
 # Build settings
 markdown: kramdown
 theme: minima
+permalink: pretty
+# gems:
+#   - jekyll-feed
+#   - jekyll-autoprefixer
 plugins:
   - jekyll-feed
 
