--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ email: vrli1@asu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write some witty description here. Have a good day!
 baseurl: "/betaPortfolio" # the subpath of your site, e.g. /blog
+# baseurl: ""
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 instagram_path: https://www.instagram.com/thisguyvince/
