trying to add resume

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ url: "http://www.pressandclick.me" # the base hostname & protocol for your site,
 
 instagram_path: https://www.instagram.com/thisguyvince/
 github_path: https://github.com/vincewho
+digication_path: https://asu.digication.com/VincentFall2017Internship/education/published
 
 path_to_blog_img: /assets/images/blog/
 
